CMAKE_MINIMUM_REQUIRED(VERSION 2.8)
PROJECT(irrtest)

SET(IRRTEST_ROOT_PATH ${PROJECT_BINARY_DIR})
SET(IRRTEST_SOURCE_PATH ${IRRTEST_ROOT_PATH}/src)
SET(IRRTEST_BIN_PATH ${IRRTEST_ROOT_PATH}/bin)
SET(IRRTEST_EXEC_NAME IRRTEST)

SET(EXECUTABLE_OUTPUT_PATH ${IRRTEST_BIN_PATH})

FILE(GLOB_RECURSE IRRTEST_SHARED_SOURCE_FILES ${IRRTEST_SOURCE_PATH}/*.cpp)
LIST(REMOVE_ITEM IRRTEST_SHARED_SOURCE_FILES ${IRRTEST_SOURCE_PATH}/main.cpp)

SET(IRRTEST_SOURCE_FILES ${IRRTEST_SOURCE_PATH}/main.cpp)

SET(IRRTEST_TEST_SOURCE_FILES ${IRRTEST_TEST_SOURCE_FILES} ${IRRTEST_SOURCE_FILES} )
LIST(REMOVE_ITEM IRRTEST_TEST_SOURCE_FILES ${IRRTEST_SOURCE_PATH}/main.cpp)

SET(CMAKE_CXX_FLAGS "-g -Wall")

ADD_LIBRARY(base STATIC ${IRRTEST_SHARED_SOURCE_FILES})

ADD_EXECUTABLE(${IRRTEST_EXEC_NAME} ${IRRTEST_SOURCE_FILES})

IF(${CMAKE_SYSTEM_NAME} MATCHES "Windows")
  TARGET_LINK_LIBRARIES(${IRRTEST_EXEC_NAME} base -lIrrlicht -static -lSOIL -lopengl32 -lglu32 -static -lfreeglut -lglaux -lglew32)
ENDIF()
IF(${CMAKE_SYSTEM_NAME} MATCHES "Linux")
  TARGET_LINK_LIBRARIES(${IRRTEST_EXEC_NAME} -lGL base -lIrrlicht -lGLU -lglut -lSDL)
ENDIF()


INSTALL(TARGETS ${IRRTEST_EXEC_NAME} DESTINATION /usr/bin/)
