CMAKE_MINIMUM_REQUIRED(VERSION 2.8)
PROJECT(metoritewars)

SET(METORITEWARS_ROOT_PATH ${PROJECT_BINARY_DIR})
SET(METORITEWARS_SOURCE_PATH ${METORITEWARS_ROOT_PATH}/src)
SET(METORITEWARS_TEST_SOURCE_PATH ${METORITEWARS_ROOT_PATH}/test)
SET(METORITEWARS_BIN_PATH ${METORITEWARS_ROOT_PATH}/bin)
SET(METORITEWARS_EXEC_NAME metoritewars)

SET(EXECUTABLE_OUTPUT_PATH ${METORITEWARS_BIN_PATH})

FILE(GLOB_RECURSE METORITEWARS_SHARED_SOURCE_FILES ${METORITEWARS_SOURCE_PATH}/*.cpp)
LIST(REMOVE_ITEM METORITEWARS_SHARED_SOURCE_FILES ${METORITEWARS_SOURCE_PATH}/main.cpp)

SET(METORITEWARS_SOURCE_FILES ${METORITEWARS_SOURCE_PATH}/main.cpp)

SET(CMAKE_CXX_FLAGS "-g -Wall")

ADD_LIBRARY(base STATIC ${METORITEWARS_SHARED_SOURCE_FILES})

ADD_EXECUTABLE(${METORITEWARS_EXEC_NAME} ${METORITEWARS_SOURCE_FILES})

IF(${CMAKE_SYSTEM_NAME} MATCHES "Windows")
  TARGET_LINK_LIBRARIES(${METORITEWARS_EXEC_NAME} base -lIrrlicht -static -lSOIL -lopengl32 -lglu32 -static -lfreeglut -lglaux -lglew32)
ENDIF()
IF(${CMAKE_SYSTEM_NAME} MATCHES "Linux")
  TARGET_LINK_LIBRARIES(${METORITEWARS_EXEC_NAME} -lGL base -lIrrlicht -lGLU -lglut -lSDL)
ENDIF()


INSTALL(TARGETS ${METORITEWARS_EXEC_NAME} DESTINATION /usr/bin/)
